--- a/css/PovertànelMedioevo.css
+++ b/css/PovertànelMedioevo.css
@@ -1,52 +1,16 @@
-h1{
+h2{
     text-align: center;
-}
-footer {
-    width: 100%;
-    height: 250px;
-    background: var(--primary-color-background-footer);
-    padding-top: 1%;
-    display: flex;
-    justify-content: space-around;
-    font-family: var(--primary-font-family-footer);
-    font-size: var(--primary-font-size-footer);
-    color: var(--primary-color-text);
+    color: white;
+    font-size: 28pt;
+    margin: 25px 0px;
 }
 
-footer div {
-    width: 25%;
 
-}
-
-footer #autori {
-    text-align: left;
-    margin-top: 3%;
-}
-
-footer #contatti {
-    text-align: center;
-    margin-top: 3%;
-}
-
-footer #indirizzo {
-
-    display: flex;
-    text-align: right;
-    justify-content: space-between;
-}
-
-footer #indirizzo img {
-
-    height: 90%;
-}
-
-footer #indirizzo #indirizzo_descrizione {
-    width: 50%;
-    margin-top: 13%;
-}
-img{
+.img_gruppo1{
     width: 300px;
     height: auto;
+    margin-left: 25px;
+    margin-top: 25px;
 }
 p{
     text-align: center;
