--- a/css/stili.css
+++ b/css/stili.css
@@ -117,11 +117,21 @@ nav .indice li a {
 
 }   
 
+
+a:visited {
+
+    color: inherit;
+}
+
+
+
 nav .indice li .active {
 
     background-color: var(--primary-color-border);
     
   }
+
+
 
 h1 {
     font-family: Miofont;
